🍿🐮 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://cdn.pixabay.com/photo/2013/10/27/17/14/snowfall-201496_1280.jpg");
+  background-image: url("https://wallpapers.com/images/featured/snow-background-v24n2zxteoor8gpf.jpg");
   color: white;
   text-align: center;
   
